--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,30 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
  <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icons/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/icons/apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/icons/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/icons/apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/icons/apple-touch-icon-60x60.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/icons/apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/icons/apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/icons/apple-touch-icon-152x152.png" />
+<link rel="icon" type="image/png" href="assets/icons/favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="assets/icons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="assets/icons/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="assets/icons/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="assets/icons/favicon-128.png" sizes="128x128" />
+<meta name="application-name" content="&nbsp;"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content="assets/icons/mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" content="assets/icons/mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" content="assets/icons/mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" content="assets/icons/mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" content="assets/icons/mstile-310x310.png" />
+<meta name="apple-mobile-web-app-title" content="Photodeck" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+
 </head>
 <body>
   <app-root></app-root>
